Added new files and updated code